Se realiza traducciones

--- a/src/app/modules/landing-page/components/beneficios/beneficios.component.html
+++ b/src/app/modules/landing-page/components/beneficios/beneficios.component.html
@@ -1,37 +1,37 @@
 
 <div class="beneficios-container">
 
-  <p class="title">Entre los beneficios que ofrecemos se encuentran <span class="carita">;)</span></p>
+  <p class="title">{{ 'beneficios.title' | translate}} <span class="carita">;)</span></p>
   
   <div class="beneficios-list">
     <div class="item">
       <img src="../../../../../assets/Ic_Hour.svg" alt="">
-      <p class="text">Flexibilidad Horaria</p>
+      <p class="text">{{ 'beneficios.ben_uno' | translate}}</p>
     </div>
 
     <div class="item">
       <img src="../../../../../assets/Ic_HomeOffice.svg" alt="">
-      <p class="text">Home Office</p>
+      <p class="text">{{ 'beneficios.ben_dos' | translate}}</p>
     </div>
 
     <div class="item">
       <img src="../../../../../assets/Ic_Workshops.svg" alt="">
-      <p class="text">Capacitaciones <br>y Workshops</p>
+      <p class="text">{{ 'beneficios.ben_tres_sub_uno' | translate}} <br>{{ 'beneficios.ben_tres_sub_dos' | translate}}</p>
     </div>
 
     <div class="item">
       <img src="../../../../../assets/Ic_DrinkSnacks.svg" alt="">
-      <p class="text">Snacks, frutas <br>y bebidas gratis</p>
+      <p class="text">{{ 'beneficios.ben_cautro_sub_uno' | translate}} <br>{{ 'beneficios.ben_cautro_sub_dos' | translate}}</p>
     </div>
 
     <div class="item">
       <img src="../../../../../assets/Ic_laptop.svg" alt="">
-      <p class="text">Semana Remota</p>
+      <p class="text">{{ 'beneficios.ben_cinco' | translate }}</p>
     </div>
 
     <div class="item">
       <img src="../../../../../assets/Ic_brain.svg" alt="">
-      <p class="text">Trabajar <br>en ultimas <br>tecnologías</p>
+      <p class="text">{{ 'beneficios.ben_seis_sub_uno' | translate }} <br>{{ 'beneficios.ben_seis_sub_dos' | translate }} <br>{{ 'beneficios.ben_seis_sub_tres' | translate }}</p>
     </div>
   </div>
 </div>
