--- a/src/app/modules/landing-page/components/footer/footer.component.html
+++ b/src/app/modules/landing-page/components/footer/footer.component.html
@@ -1,12 +1,12 @@
 
 <div class="footer-container">
-  <p class="text_uno">Gracias por <span class="color_azul">completar el ejercicio</span></p>
+  <p class="text_uno">{{ 'footer.linea_uno_sub_uno' | translate}} <span class="color_azul">{{ 'footer.linea_uno_sub_dos' | translate}}</span></p>
   
-  <p class="text_dos">Te invitamos a ver más información</p>
+  <p class="text_dos">{{ 'footer.linea_dos' | translate}}</p>
   
   <div class="button-container text_tres">
     <a href="https://www.wolox.com.ar/" target="_blank">
-      <button class="button-conocer-mas" id="buttonConocerMas">Conocer más</button>
+      <button class="button-conocer-mas" id="buttonConocerMas">{{ 'footer.button' | translate}}</button>
     </a>
   </div>
 
