--- a/src/app/modules/landing-page/components/home/home.component.html
+++ b/src/app/modules/landing-page/components/home/home.component.html
@@ -2,9 +2,9 @@
 <div class="container-header">
   <div class="header-title">
     <div class="text-container">
-      <p>Bienvenido a tu <br> 
-        <span class="text bold">Entrevista Tecnica</span> en <br>
-        <span class="text color">Wolox</span>
+      <p>{{ 'home.etiqueta_p_uno' | translate}} <br> 
+        <span class="text bold">{{ 'home.etiqueta_p_sapan' | translate}}</span> {{ 'home.etiqueta_p_dos' | translate}} <br>
+        <span class="text color">{{ 'home.etiqueta_p_span_dos' | translate}}</span>
       </p>
     </div>
   </div>
