--- a/src/app/modules/landing-page/components/inicio/inicio.component.html
+++ b/src/app/modules/landing-page/components/inicio/inicio.component.html
@@ -19,7 +19,7 @@
 
       <div class="button-container">
         <a href="https://twitter.com/Wolox" target="_blank">
-          <button class="bg-transparent" id="buttonSiguenos">Siguenos</button>
+          <button class="bg-transparent" id="buttonSiguenos">{{ 'inicio.boton_siguenos' | translate}}</button>
         </a>
       </div>
     </div>
@@ -27,11 +27,11 @@
 
   <div class="inicio-container-der">
     <div class="texto-container">
-      <p class="texto_1">Trabajamos para</p>
+      <p class="texto_1">{{ 'inicio.linea_uno' | translate}}</p>
       <p class="texto_2">
-        <span class="color_azul">convertir</span> <span class="color_verde"> ideas</span> en
+        <span class="color_azul">{{ 'inicio.linea_dos_azul' | translate}}</span> <span class="color_verde"> {{ 'inicio.linea_dos_verde' | translate}}</span> {{ 'inicio.linea_tres' | translate}}
       </p>
-      <p class="texto_3">productos.</p>
+      <p class="texto_3">{{ 'inicio.linea_cuatro' | translate}}.</p>
     </div>
   </div>
 </div>
